--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso Web</title>
+    <title>Aula 2</title>
 </head>
 <body>
-    Olá Mundo !
+    <!-- tag de cabeçalho -->
+   <h1>Bem vindos!</h1>
+   <p>
+    Este é o curso de programador do SENAC
+   </p>
+    <p>
+Clique no link abaixo para se inscrever.
+    </p>
+    <a href="Cadastro.html">
+    Cadastro
+    </a>
 </body>
 </html>
